# Essai-Detect

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run.py
app/: app.py  index.html  main.py
app/model/: logreg.pkl
app/static/css/: app.css
app/static/js/: app.js
docs/data/: sample-text.txt
model/: tfidf.pkl
