[project]
name = "essai-detect"
version = "1.0.0"
description = "A simple chat application for detecting LLM-generated text."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "joblib>=1.5.3",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pyinstaller>=6.21.0",
    "pywebview>=6.2.1",
    "safetensors>=0.8.0",
    "scikit-learn>=1.9.0",
    "torch>=2.13.0",
    "tqdm>=4.68.4",
    "transformers>=5.13.1",
    "waitress>=3.0.2",
]
